syntax = "proto3";

package greet;

// --go_opt=module=github.com/Cotidie/STEADY/gRPC/Basics
option go_package = "github.com/Cotidie/STEADY/gRPC/Basics/greet/proto";

message GreetRequest {
    string first_name = 2;
}

message GreetResponse {
    string result = 1;
}

// Service provides API interfaces for client and server both
service GreetService {
    // Unary Type
    rpc Greet (GreetRequest) returns (GreetResponse);
    // Server Streaming Type
    rpc GreetManyTImes (GreetRequest) returns (stream GreetResponse);
    // Client Streaming Type
    rpc GreetLong (stream GreetRequest) returns (GreetResponse);
    // Bidirectional
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
}